+ Add reset password section + Add Lock Screen action to sidebar-footer btn + Add fullScreen action to sidebar-footer btn * Fix sidebar-footer cursor * Fix has-feedback form-control padding rtl + Add npm start * Fix overflow on lock screen

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -4917,26 +4917,29 @@ div#graph_donut svg text {
   display: none;
 }
 
-body.lock #lock_screen {
-  display: block;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  background: rgba(0, 0, 0, .96);
-  z-index: 100000;
-  .clock {
-    direction: ltr;
-    font-size: 10em;
-    color: white;
-  }
-  table {
+body.lock {
+  overflow: hidden;
+  #lock_screen {
+    display: block;
+    position: fixed;
     width: 100%;
     height: 100%;
-    text-align: center;
-  }
-  .unlock {
-    cursor: pointer;
+    top: 0;
+    right: 0;
+    background: rgba(0, 0, 0, .96);
+    z-index: 100000;
+    .clock {
+      direction: ltr;
+      font-size: 10em;
+      color: white;
+    }
+    table {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+    }
+    .unlock {
+      cursor: pointer;
+    }
   }
 }
